--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AbcBuilders</string>
+    <string name="app_name">Abc</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_navigation">Navigation</string>
 
@@ -11,7 +11,7 @@
 
 
     </string>
-    <string name="title_activity_contact_us">ContactUS</string>
-    <string name="title_activity_testimonials">Testimonials</string>
+    <string name="title_activity_contact_us">ClientsInfo</string>
+    <string name="title_activity_retrofit_practice">Testimonials</string>
     <string name="title_activity_locations">Map</string>
 </resources>
