--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_activity_contact_us">ClientsInfo</string>
     <string name="title_activity_retrofit_practice">Testimonials</string>
     <string name="title_activity_locations">Map</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
